--- a/app/src/main/res/layout/row_timing_list.xml
+++ b/app/src/main/res/layout/row_timing_list.xml
@@ -12,6 +12,10 @@
             type="Integer" />
 
         <variable
+            name="today"
+            type="String" />
+
+        <variable
             name="context"
             type="android.content.Context" />
 
@@ -25,57 +29,84 @@
         android:id="@+id/llMon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp"
+        android:background="@{model.day.substring(0,3).equalsIgnoreCase(today) ? context.getColor(R.color.color_selected_language) : context.getColor(R.color.white)}"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingHorizontal="@dimen/_15sdp">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_4sdp"
+            android:layout_marginHorizontal="@dimen/_3sdp"
             android:layout_weight="0.6"
             android:fontFamily="@font/opensans_bold"
             android:padding="@dimen/_4sdp"
             android:text="@{model.day.substring(0,3)}"
             android:textAllCaps="true"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_12sdp" />
+            android:textColor="@{model.day.substring(0,3).equalsIgnoreCase(today) ? context.getColor(R.color.colorPrimary) : context.getColor(R.color.black)}"
+            android:textSize="14sp" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/ivChecked"
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp"
-            android:padding="@dimen/_5sdp"
-            android:src="@{model.enabled ? @drawable/ic_checked : @drawable/ic_unchecked}" />
+        <FrameLayout
+            android:id="@+id/flChecked"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="@dimen/_4sdp">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivChecked"
+                android:layout_width="@dimen/_16sdp"
+                android:layout_height="@dimen/_16sdp"
+                android:layout_gravity="center"
+                android:src="@{model.enabled ? @drawable/ic_checked : @drawable/ic_unchecked}" />
+        </FrameLayout>
 
         <TextView
             android:id="@+id/tvStartTime"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_4sdp"
+            android:layout_marginHorizontal="@dimen/_3sdp"
             android:layout_weight="1"
             android:background="@drawable/default_btn_selector"
             android:fontFamily="@font/opensans_regular"
+            android:gravity="center"
             android:hint="@string/not_available"
-            android:padding="@dimen/_4sdp"
+            android:paddingHorizontal="@dimen/_4sdp"
+            android:paddingVertical="@dimen/_2sdp"
             android:text="@{model.opening}"
             android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_12sdp" />
+            android:textColor="@{model.day.substring(0,3).equalsIgnoreCase(today) ? context.getColor(R.color.colorPrimary) : context.getColor(R.color.black)}"
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/tvEndTime"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_4sdp"
+            android:layout_marginHorizontal="@dimen/_3sdp"
             android:layout_weight="1"
             android:background="@drawable/default_btn_selector"
             android:fontFamily="@font/opensans_regular"
+            android:gravity="center"
             android:hint="@string/not_available"
-            android:padding="@dimen/_4sdp"
+            android:paddingHorizontal="@dimen/_3sdp"
+            android:paddingVertical="@dimen/_2sdp"
             android:text="@{model.closing}"
             android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_12sdp" />
+            android:textColor="@{model.day.substring(0,3).equalsIgnoreCase(today) ? context.getColor(R.color.colorPrimary) : context.getColor(R.color.black)}"
+            android:textSize="15sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_5sdp"
+            android:background="@drawable/btn_primary_round_corners"
+            android:fontFamily="@font/opensans_regular"
+            android:gravity="center"
+            android:hint="@string/not_available"
+            android:paddingVertical="@dimen/_2sdp"
+            android:text="@string/today"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="11sp"
+            android:visibility="@{model.day.substring(0,3).equalsIgnoreCase(today) ? View.VISIBLE : View.INVISIBLE}" />
     </LinearLayout>
 </layout>
