--- a/app/src/main/res/menu/menu_notification.xml
+++ b/app/src/main/res/menu/menu_notification.xml
@@ -5,8 +5,8 @@
 
     <item
         android:id="@+id/actionNotification"
-        android:enabled="true"
-        android:icon="@drawable/ic_notification_menu"
+        android:enabled="false"
+        android:icon="@drawable/ic_transparent_placeholder"
         android:title="@string/notifications"
         app:showAsAction="always" />
 
