--- a/app/src/main/res/layout/fragment_basic_details.xml
+++ b/app/src/main/res/layout/fragment_basic_details.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/frameImg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -42,13 +42,13 @@
 
                 <ImageView
                     android:id="@+id/ivEditPhoto"
-                    android:layout_width="@dimen/_25sdp"
-                    android:layout_height="@dimen/_25sdp"
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="@dimen/_20sdp"
                     android:layout_gravity="right|top"
+                    android:layout_marginTop="@dimen/_10sdp"
                     android:background="@drawable/white_cicle"
                     android:onClick="@{()->ivProfileImg.performClick()}"
-                    android:padding="@dimen/_3sdp"
-                    android:src="@drawable/ic_edit_round_black" />
+                    android:src="@drawable/ic_edit_pic" />
 
             </FrameLayout>
 
